<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_coorinates">Invalid Coordinates</string>
    <string name="service_not_available">Service not available</string>
    <string name="values_cannot_be_updated">Location cannot be updated, please check permissions or location settings</string>
    <string name="retry_connection">Retry</string>
    <string name="error_retry">An error occurred, please retry</string>
    <string name="share_via">Share Via</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="finish">Finish</string>
    <string name="more">More</string>
    <string name="names_of_god">Names of God</string>
    <string name="quran">Quran</string>
    <string name="calendar_and_events">Calendar and events</string>
    <string name="tasbeeh">Tasbeeh</string>
    <string name="gallery">Gallery</string>
    <string name="news">News</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country">Contry</string>
    <string name="pick_a_country">Pick your country</string>
    <string name="home">Home</string>
    <string name="current_month">Sha\'ban</string>
    <string name="dateTimeTitle">7 Sha\'ban 1440 / 30 Apr 2019</string>
    <string name="current_location">Tirana , Albania</string>
    <string name="test_time">12:25</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="test_arabic">الرَّح</string>
    <string name="test_transliteration">Ar Rahmaan</string>
    <string name="test_meaning">The Precious / The Most Mighty</string>
    <string name="wake_me_up_for_fajr">Do you want the app to wake you up for Fajr?</string>
    <string name="article_title">Title</string>
    <string name="by_author">By Beni Malko</string>
    <string name="some_date">01/01/0001</string>
    <string name="some_description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
        piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin
        professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur,
        from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the
        undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\"
        (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics,
        very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from
        a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those
        interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in
        their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
    </string>
    <string name="article_details">Post details</string>
    <string name="download">Download</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="wake_up_fajr">Notified on Fajr time</string>
    <string name="wake_up_dhuhr">Notified on Dhuhr time</string>
    <string name="wake_up_asr">Notified on Asr timea</string>
    <string name="wake_up_maghrib">Notified on Maghrib time</string>
    <string name="wake_up_isha">Notified on Isha time</string>
    <string name="map">Map</string>
    <string name="please_specify_city">Please add your city</string>
    <string name="search">Search</string>
    <string name="city_not_found">City not found</string>
    <string name="some_number">114</string>
    <string name="some_english_name">Some English Name</string>
    <string name="some_relevation">Relevation: Mecca</string>
    <string name="longestSurah">يَا أَيُّهَا الَّذِينَ آمَنُوا إِذَا تَدَايَنْتُمْ بِدَيْنٍ إِلَىٰ أَجَلٍ مُسَمًّى
        فَاكْتُبُوهُ ۚ وَلْيَكْتُبْ بَيْنَكُمْ كَاتِبٌ بِالْعَدْلِ ۚ وَلَا يَأْبَ كَاتِبٌ أَنْ يَكْتُبَ كَمَا عَلَّمَهُ
        اللَّهُ ۚ فَلْيَكْتُبْ وَلْيُمْلِلِ الَّذِي عَلَيْهِ الْحَقُّ وَلْيَتَّقِ اللَّهَ رَبَّهُ وَلَا يَبْخَسْ مِنْهُ
        شَيْئًا ۚ فَإِنْ كَانَ الَّذِي عَلَيْهِ الْحَقُّ سَفِيهًا أَوْ ضَعِيفًا أَوْ لَا يَسْتَطِيعُ أَنْ يُمِلَّ هُوَ
        فَلْيُمْلِلْ وَلِيُّهُ بِالْعَدْلِ ۚ وَاسْتَشْهِدُوا شَهِيدَيْنِ مِنْ رِجَالِكُمْ ۖ فَإِنْ لَمْ يَكُونَا
        رَجُلَيْنِ فَرَجُلٌ وَامْرَأَتَانِ مِمَّنْ تَرْضَوْنَ مِنَ الشُّهَدَاءِ أَنْ تَضِلَّ إِحْدَاهُمَا فَتُذَكِّرَ
        إِحْدَاهُمَا الْأُخْرَىٰ ۚ وَلَا يَأْبَ الشُّهَدَاءُ إِذَا مَا دُعُوا ۚ وَلَا تَسْأَمُوا أَنْ تَكْتُبُوهُ
        صَغِيرًا أَوْ كَبِيرًا إِلَىٰ أَجَلِهِ ۚ ذَٰلِكُمْ أَقْسَطُ عِنْدَ اللَّهِ وَأَقْوَمُ لِلشَّهَادَةِ وَأَدْنَىٰ
        أَلَّا تَرْتَابُوا ۖ إِلَّا أَنْ تَكُونَ تِجَارَةً حَاضِرَةً تُدِيرُونَهَا بَيْنَكُمْ فَلَيْسَ عَلَيْكُمْ
        جُنَاحٌ أَلَّا تَكْتُبُوهَا ۗ وَأَشْهِدُوا إِذَا تَبَايَعْتُمْ ۚ وَلَا يُضَارَّ كَاتِبٌ وَلَا شَهِيدٌ ۚ وَإِنْ
        تَفْعَلُوا فَإِنَّهُ فُسُوقٌ بِكُمْ ۗ وَاتَّقُوا اللَّهَ ۖ وَيُعَلِّمُكُمُ ا
    </string>
    <string name="refresh">Refresh</string>
    <string name="thanking_news_api_message">This menu is brought to you thanks to newsapi.org</string>
    <string name="dismiss">Dismiss</string>
    <string name="default_country_and_capital">Tirana, Albania</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="settings_saved">Setttings saved</string>
    <string name="location">Location</string>
    <string name="click_to_change_location">Click here if you want to change location of your device</string>
    <string name="compass">Qibla Compass</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="please_wait_takes_long">Please wait, downloading quran might take a little long</string>
    <string name="ok">OK</string>
    <string name="error_occured_please_retry">An error occurred , please check internet connection try again later</string>
</resources>
