...
                app:destination="@id/setupFragment"
                app:popUpTo="@+id/treasure_nav" />
    </fragment>
    <fragment
            android:id="@+id/namesFragment"
            android:name="com.sxhardha.names_module.ui.NamesFragment"
            android:label="Names of Allah"
            tools:layout="@layout/fragment_names" />
    <fragment
            android:id="@+id/quranFragment"
            android:name="com.sxhardha.quran_module.ui.quran.QuranFragment"
            android:label="Quran"
            tools:layout="@layout/fragment_quran">
...
